[gd_scene load_steps=4 format=3 uid="uid://dti8etlwum4ij"]

[ext_resource type="Script" uid="uid://cq5bw6vhuts6u" path="res://scripts/ui/LobbyController.gd" id="1_lobby"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 24
font_color = Color(0.9, 0.9, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_info"]
font_color = Color(0.8, 0.8, 0.9, 1)

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HBoxContainer/LeftPanel"]
layout_mode = 2
text = "Game Lobby"
label_settings = SubResource("LabelSettings_title")

[node name="GameInfo" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="HBoxContainer/LeftPanel/GameInfo"]
layout_mode = 2
text = "Game: Loading..."
label_settings = SubResource("LabelSettings_info")

[node name="PlayerCount" type="Label" parent="HBoxContainer/LeftPanel/GameInfo"]
layout_mode = 2
text = "Players: 0/8"
label_settings = SubResource("LabelSettings_info")

[node name="ServerIP" type="Label" parent="HBoxContainer/LeftPanel/GameInfo"]
layout_mode = 2
text = "Server: 127.0.0.1:8080"
label_settings = SubResource("LabelSettings_info")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="StartButton" type="Button" parent="HBoxContainer/LeftPanel/Controls"]
layout_mode = 2
disabled = true
text = "Start Game"

[node name="BackButton" type="Button" parent="HBoxContainer/LeftPanel/Controls"]
layout_mode = 2
text = "Back to Menu"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayersTitle" type="Label" parent="HBoxContainer/RightPanel"]
layout_mode = 2
text = "Players"
label_settings = SubResource("LabelSettings_title")

[node name="PlayersList" type="VBoxContainer" parent="HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Waiting for players..."
horizontal_alignment = 1
